respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment_Consolidation_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account_for_Customer__c</fullName>
        <formula>Import_Export_Quote__r.Account_for__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account for (Customer)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Air_Shipment_Status__c</fullName>
        <formula>TEXT(Shipment__r.Air_Shipment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Air Shipment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Email__c</fullName>
        <label>Carrier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <formula>Shipment__r.Carrier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Account_Destination__c</fullName>
        <formula>Import_Export_Quote__r.Consignee__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee Account (Destination)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountConfirmed__c</fullName>
        <formula>IF( Shipment_Status_Planner__c = &quot;Confirmed&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confirmed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer/Buyer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipment Consolidation Data (Customer)</relationshipLabel>
        <relationshipName>Shipment_Consolidation_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <formula>Import_Export_Quote__r.Customer_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Planner_Confirmed__c</fullName>
        <formula>Shipment__r.Date_Planner_Confirmed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Planner Confirmed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Direccion_Monitoreo__c</fullName>
        <formula>Shipment__r.Direccion_Monitoreo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direccion Monitoreo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disbursement</label>
        <referenceTo>Shipment_Disbursement__c</referenceTo>
        <relationshipLabel>Shipment Consolidation Data</relationshipLabel>
        <relationshipName>Shipment_Consolidation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Freight_Mode__c</fullName>
        <formula>TEXT( Shipment__r.Freight_Mode__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Export_Mode__c</fullName>
        <formula>Import_Export_Quote__r.Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import-Export Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import-Export Quote</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Shipment Consolidation Data</relationshipLabel>
        <relationshipName>Shipment_Orders_Consolidation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Import_Export_Route__c</fullName>
        <label>Import-Export Route</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meta_Colocacion__c</fullName>
        <formula>Shipment__r.Operation_Executive__r.Meta_Colocacion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meta Colocacion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Expo_Shipment_Status__c</fullName>
        <formula>TEXT(Shipment__r.Shipment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ocean Expo Shipment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocean_Impo_Shipment_Status__c</fullName>
        <formula>TEXT(Shipment__r.Ocean_Shipment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ocean Impo Shipment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_ExecutivePlanner__c</fullName>
        <formula>Shipment__r.Operation_Executive__r.FirstName  &amp; &quot; &quot; &amp;  Shipment__r.Operation_Executive__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operations Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orden_de_compra_SAP__c</fullName>
        <formula>Disbursement__r.OrdenCompra__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orden de compra SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_O_Number__c</fullName>
        <formula>Import_Export_Quote__r.Purchase_OrderNum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P.O. Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_ETA__c</fullName>
        <formula>Shipment__r.ETA_Point_of_Discharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_ETD__c</fullName>
        <formula>Shipment__r.ETD_from_Point_of_Load__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned ETD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plaza_Planner_Piloto__c</fullName>
        <formula>IF(Import_Export_Quote__r.State_of_Load__r.Plaza_Planner_Piloto__c =&quot;GDL&quot;,
&quot;GDL&quot;,
  IF(Import_Export_Quote__r.State_of_Discharge__r.Plaza_Planner_Piloto__c =&quot;GDL&quot;,&quot;GDL&quot;,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plaza Planner Piloto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Status__c</fullName>
        <formula>TEXT(Import_Export_Quote__r.Quotation_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>References_hidden__c</fullName>
        <description>This Field is used to can search by Import-Export,Shipment and Shipment Programs</description>
        <label>References hidden</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCD_Carrier_Customer_Id__c</fullName>
        <formula>Shipment__r.Carrier__r.Customer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCD_Account_Destination_AddressID__c</fullName>
        <formula>Shipment__r.Account_Destination_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Destination Address ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCD_Account_Origin_AddressID__c</fullName>
        <formula>Shipment__r.Account_Origin_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accoun Origin Adress ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCD_Celula__c</fullName>
        <formula>TEXT(Shipment__r.Account_for__r.P2G_CAPEX_Celulas__c)</formula>
        <label>Célula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_Total_Services_Sell_Amount__c</fullName>
        <formula>Shipment__r.Total_Services_Sell_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SP - Total Services Sell Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shi__c</fullName>
        <formula>Shipment__r.Total_Services_Std_Buy_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment: Total Services Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment_Create_Date__c</fullName>
        <formula>Shipment__r.Shipment_Create_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shipment_Id__c</fullName>
        <formula>Shipment__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Mode__c</fullName>
        <formula>Shipment__r.Mode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Record_Type__c</fullName>
        <formula>Shipment__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status_Monitoreo__c</fullName>
        <formula>TEXT(Shipment__r.Shipment_Status_Mon__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Status Monitoreo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status_Planner__c</fullName>
        <formula>TEXT(Shipment__r.Shipment_Status_Plann__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Status Planner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <formula>TEXT(Shipment__r.Shipment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Total_Services_Sell_Amount__c</fullName>
        <formula>Shipment__r.Total_Services_Sell_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment: Total Services Sell Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipName>Shipment_Orders_Consolidation_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Shipments_Program_Route__c</fullName>
        <formula>Shipments_Program__r.Route__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipments Program Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipments_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipments Program</label>
        <referenceTo>Shipment_Program__c</referenceTo>
        <relationshipLabel>Shipment Consolidation Data</relationshipLabel>
        <relationshipName>Shipment_Consolidation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shopping_Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Order</label>
        <referenceTo>Shopping_Cart__c</referenceTo>
        <relationshipLabel>Shipment Consolidation Data</relationshipLabel>
        <relationshipName>Shipment_Consolidation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_of_Discharge__c</fullName>
        <formula>Shipment__r.Site_of_Discharge__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site of Discharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_of_Load__c</fullName>
        <formula>Shipment__r.Site_of_Load__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site of Load</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Quote/Order</label>
        <referenceTo>Supplier_Quote__c</referenceTo>
        <relationshipLabel>Shipment Consolidation Data</relationshipLabel>
        <relationshipName>Shipment_Consolidation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Shipper_Account_Origin__c</fullName>
        <formula>Import_Export_Quote__r.Supplier_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier/Shipper Account (Origin)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipment Consolidation Data (Supplier)</relationshipLabel>
        <relationshipName>Shipment_Consolidation_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <formula>Shipment__r.Total_Standard_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Product_Value_Shipped__c</fullName>
        <inlineHelpText>Sum Product Value Shipped from all Shipment Item Lines related to the same Shopping Cart, Supplier Quote or Import-Export Quote.</inlineHelpText>
        <label>Total Product Value Shipped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Services_Profit__c</fullName>
        <formula>Shipment__r.Total_Services_Std_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Services Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_Shipped__c</fullName>
        <inlineHelpText>Sum Units Shipped from all Shipment Item Lines related to the same Shopping Cart, Supplier Quote or Import-Export Quote.</inlineHelpText>
        <label>Total Units Shipped</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workplace_Planner__c</fullName>
        <formula>Shipment__r.Workplace_PlannerFN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workplace Planner</label>
        <type>Text</type>
    </fields>
    <label>Shipment Consolidation Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CountConfirmed__c</columns>
        <columns>Shipment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shipment__c</field>
            <operation>contains</operation>
            <value>FN</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/1/2023 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipment Consolidation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Consolidation Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>